--- a/hcar-28/hcar-28-octohat.tex
+++ b/hcar-28/hcar-28-octohat.tex
@@ -7,27 +7,16 @@
 
 \begin{document}
 
-\begin{hcarentry}{(MYSTUFF)}
+\begin{hcarentry}{Octohat (Stack Builders)}
 \report{(MY NAME)}
 \status{(PROJECT STATUS IN ONE LINE)}
 \participants{(PARTICIPANTS OTHER THAN MYSELF)}% optional
 \makeheader
 
-Put the text here. 
-If you want to include Haskell code, consider using lhs2tex syntax (\url{http://people.cs.uu.nl/andres/lhs2tex/}).
 
-What's following are suggestions for the content of an entry.
-
-(WHAT IS IT?)
-
-(WHAT IS ITS STATUS? / WHAT HAS HAPPENED SINCE LAST TIME?)
-
-(CAN OTHERS GET IT?)
-
-(WHAT ARE THE IMMEDIATE PLANS?)
 
 \FurtherReading
-  \url{(PROJECT URL)}
+  \url{https://github.com/stackbuilders/octohat}
 \end{hcarentry}
 
 \end{document}
