Update template and add hcar-28-openssh-github-keys

--- a/hcar-28/hcar-28-openssh-github-keys.tex
+++ b/hcar-28/hcar-28-openssh-github-keys.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 
-\begin{hcarentry}{PROJECT NAME (Stack Builders)}
+\begin{hcarentry}{openssh-github-keys (Stack Builders)}
 \report{Stack Builders}
 \status{(PROJECT STATUS IN ONE LINE)}
 \participants{(PARTICIPANTS OTHER THAN MYSELF)}% optional
@@ -27,7 +27,7 @@ What's following are suggestions for the content of an entry.
 (WHAT ARE THE IMMEDIATE PLANS?)
 
 \FurtherReading
-  \url{PROJECT URL}
+  \url{https://github.com/stackbuilders/openssh-github-keys}
 \end{hcarentry}
 
 \end{document}
