--- a/hcar-28/hcar-28-octohat.tex
+++ b/hcar-28/hcar-28-octohat.tex
@@ -13,8 +13,16 @@
 \participants{Juan Carlos Paucar, Sebastian Estrella, Juan Pablo Santos}% optional
 \makeheader
 
-During the development of one of our internal projects we found the need for a simple way to interact with GitHub’s API. After finding out the existing solutions in Hackage hard to adapt to our needs due to a lack of testing we took to write our own API wrapper. After two weeks of development we released the first version of Octohat. We currently cover only a small part of the API, but we’re proud to say that we have complete test coverage so users of the library can be confident the library works as expected even if GitHub’s API changes. We are very responsive to pull requests and we are looking forward to any contribution from the wider community.
-
+During the development of one of our internal projects we found the
+need for a simple way to interact with GitHub's API. After finding out
+the existing solutions in Hackage hard to adapt to our needs due to a
+lack of testing we took to write our own API wrapper. After two weeks
+of development we released the first version of Octohat. We currently
+cover only a small part of the API, but we're proud to say that we
+have complete test coverage so users of the library can be confident
+the library works as expected even if GitHub's API changes. We are
+very responsive to pull requests and we are looking forward to any
+contribution from the wider community.
 
 \FurtherReading
 \url{https://github.com/stackbuilders/octohat} \url{http://www.stackbuilders.com/news/announcing-octohat-a-new-haskell-wrapper-for-github-s-api} \url{http://www.stackbuilders.com/news/new-octohat-release}
