--- a/hcar-28/hcar-28-octohat.tex
+++ b/hcar-28/hcar-28-octohat.tex
@@ -14,15 +14,16 @@
 \makeheader
 
 During the development of one of our internal projects we found the
-need for a simple way to interact with GitHub's API. After finding out
-the existing solutions in Hackage hard to adapt to our needs due to a
-lack of testing we took to write our own API wrapper. After two weeks
-of development we released the first version of Octohat. We currently
-cover only a small part of the API, but we're proud to say that we
-have complete test coverage so users of the library can be confident
-the library works as expected even if GitHub's API changes. We are
-very responsive to pull requests and we are looking forward to any
-contribution from the wider community.
+need for a simple way to interact with GitHub's API. After finding the
+existing solutions in Hackage hard to adapt to our needs, we began to
+write our own API wrapper.
+
+After two weeks of development, we released the first version of
+Octohat. Currently we only cover a small part of the API, but we think
+that the preliminary library design and Octohat's high level of
+automated test coverage will make extension to cover more endpoints
+easy. We are very responsive to pull requests and we are looking
+forward to any contribution from the wider community.
 
 \FurtherReading
 \url{https://github.com/stackbuilders/octohat} \url{http://www.stackbuilders.com/news/announcing-octohat-a-new-haskell-wrapper-for-github-s-api} \url{http://www.stackbuilders.com/news/new-octohat-release}
