Refactor Octohat post

--- a/hcar-28/hcar-28-octohat.tex
+++ b/hcar-28/hcar-28-octohat.tex
@@ -13,17 +13,21 @@
 \participants{Juan Carlos Paucar, Sebastian Estrella, Juan Pablo Santos}% optional
 \makeheader
 
-During the development of one of our internal projects we found the
-need for a simple way to interact with GitHub's API. After finding the
-existing solutions in Hackage hard to adapt to our needs, we began to
-write our own API wrapper.
+Octohat is a comprehensively test-covered Haskell library that wraps
+GitHub's API. While we have used it successfully in an open-source
+project to
+\href{https://hackage.haskell.org/package/openssh-github-keys}{automate
+  granting access control to servers}, it is in very early
+development, and it only covers a small portion of GitHub's API.
 
-After two weeks of development, we released the first version of
-Octohat. Currently we only cover a small part of the API, but we think
-that the preliminary library design and Octohat's high level of
-automated test coverage will make extension to cover more endpoints
-easy. We are very responsive to pull requests and we are looking
-forward to any contribution from the wider community.
+Octohat is available on
+\href{http://http://hackage.haskell.org/package/octohat}{Hackage}, and
+the source code can be found on
+\href{https://github.com/stackbuilders/octohat}{GitHub}.
+
+We have already received some contributions from the community for
+Octohat, and we are looking forward to more contributions in the
+future.
 
 \FurtherReading
 \url{https://github.com/stackbuilders/octohat} \url{http://www.stackbuilders.com/news/announcing-octohat-a-new-haskell-wrapper-for-github-s-api} \url{http://www.stackbuilders.com/news/new-octohat-release}
