--- a/hcar-28/hcar-28-openssh-github-keys.tex
+++ b/hcar-28/hcar-28-openssh-github-keys.tex
@@ -19,7 +19,7 @@ modifying this file to grant and revoke access, a relatively new
 feature of OpenSSH allows the accepted public keys to be pulled from
 standard output of a command.
 
-This package acts as a bridge between the OpenSSH daemon and Github so
+This package acts as a bridge between the OpenSSH daemon and GitHub so
 that you can manage access to servers by simply changing a GitHub
 Team, instead of manually modifying the \texttt{authorized\_keys}
 file. This package uses the
