Fix Octohat Hackage link and split links in itemize

--- a/hcar-28/hcar-28-octohat.tex
+++ b/hcar-28/hcar-28-octohat.tex
@@ -21,7 +21,7 @@ project to
 development, and it only covers a small portion of GitHub's API.
 
 Octohat is available on
-\href{http://http://hackage.haskell.org/package/octohat}{Hackage}, and
+\href{http://hackage.haskell.org/package/octohat}{Hackage}, and
 the source code can be found on
 \href{https://github.com/stackbuilders/octohat}{GitHub}.
 
@@ -30,7 +30,14 @@ Octohat, and we are looking forward to more contributions in the
 future.
 
 \FurtherReading
-\url{https://github.com/stackbuilders/octohat} \url{http://www.stackbuilders.com/news/announcing-octohat-a-new-haskell-wrapper-for-github-s-api} \url{http://www.stackbuilders.com/news/new-octohat-release}
+\begin{itemize}
+\item
+  \url{https://github.com/stackbuilders/octohat}
+\item
+  \href{http://www.stackbuilders.com/news/announcing-octohat-a-new-haskell-wrapper-for-github-s-api}{Octohat announcement}
+\item
+  \href{http://www.stackbuilders.com/news/new-octohat-release}{Octohat update}
+\end{itemize}
 \end{hcarentry}
 
 \end{document}
