Make summary more concise

--- a/hcar-28/hcar-28-openssh-github-keys.tex
+++ b/hcar-28/hcar-28-openssh-github-keys.tex
@@ -9,7 +9,7 @@
 
 \begin{hcarentry}{openssh-github-keys (Stack Builders)}
 \report{Stack Builders}
-\status{Open Source, active library to automatically manage SSH access to servers using your existing GitHub teams}
+\status{A library to automatically manage SSH access to servers using GitHub teams}
 \participants{Justin Leitgeb}% optional
 \makeheader
 
